Ancestral legacies tab now correctly work on firefox

--- a/src/assets/scss/components/_a.scss
+++ b/src/assets/scss/components/_a.scss
@@ -1,3 +1,3 @@
-a:visited {
+a, a:visited {
     color: inherit;
 }
